--- a/src/app/experience/experience.tpl.html
+++ b/src/app/experience/experience.tpl.html
@@ -1,3 +1,9 @@
+<image-accordion>
+    <accordion-row>123</accordion-row>
+    <accordion-row>456</accordion-row>
+    <accordion-row>789</accordion-row>
+</image-accordion>
+
 <div ng-repeat="job in experience">
     <h2 ng-click="job.visible = !job.visible">{{job.title}}</h2>
     <div ng-show="job.visible">
