--- a/src/app/experience/experience.tpl.html
+++ b/src/app/experience/experience.tpl.html
@@ -1,34 +1,28 @@
 <image-accordion>
-    <accordion-row>123</accordion-row>
-    <accordion-row>456</accordion-row>
-    <accordion-row>789</accordion-row>
+    <accordion-row ng-repeat="n in [1,2,3,4,5]" title="Title - {{n}}" alternate="$index % 2">Content - {{n}}</accordion-row>
+    <!--<accordion-row ng-repeat="job in experience" title="{{job.title}}" alternate="$index % 2">-->
+        <!--<h3>Websites developed in this position</h3>-->
+        <!--<ul>-->
+            <!--<li ng-repeat="site in job.portfolio">-->
+                <!--{{site.title}} - <a href="{{site.url}}">{{site.url}}</a>-->
+                <!--<ul ng-if="site.description">-->
+                    <!--<li>{{site.description}}</li>-->
+                <!--</ul>-->
+            <!--</li>-->
+        <!--</ul>-->
+
+        <!--<h3>Skills and languages used in this position</h3>-->
+        <!--<ul>-->
+            <!--<li ng-repeat="skill in job.skill">-->
+                <!--{{skill}}-->
+            <!--</li>-->
+        <!--</ul>-->
+
+        <!--<h3 ng-if="job.other.length > 0">Other skills applied in this position</h3>-->
+        <!--<ul ng-if="job.other.length > 0">-->
+            <!--<li ng-repeat="other in job.other">-->
+                <!--{{other}}-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</accordion-row>-->
 </image-accordion>
-
-<div ng-repeat="job in experience">
-    <h2 ng-click="job.visible = !job.visible">{{job.title}}</h2>
-    <div ng-show="job.visible">
-        <h3>Websites developed in this position</h3>
-        <ul>
-            <li ng-repeat="site in job.portfolio">
-                {{site.title}} - <a href="{{site.url}}">{{site.url}}</a>
-                <ul ng-if="site.description">
-                    <li>{{site.description}}</li>
-                </ul>
-            </li>
-        </ul>
-
-        <h3>Skills and languages used in this position</h3>
-        <ul>
-            <li ng-repeat="skill in job.skill">
-                {{skill}}
-            </li>
-        </ul>
-
-        <h3 ng-if="job.other.length > 0">Other skills applied in this position</h3>
-        <ul ng-if="job.other.length > 0">
-            <li ng-repeat="other in job.other">
-                {{other}}
-            </li>
-        </ul>
-    </div>
-</div>
