Adding helpers less file, and implementing basic slide animations for accordions

--- a/src/app/directives/imageAccordion/accordionRow.tpl.html
+++ b/src/app/directives/imageAccordion/accordionRow.tpl.html
@@ -4,6 +4,6 @@
     </div>
     <div class="accordion-content">
         <div class="title" ng-click="visible = !visible">{{title}}</div>
-        <div ng-show="visible" ng-transclude></div>
+        <div ng-show="visible" class="content slide" ng-transclude></div>
     </div>
 </div>
