--- a/src/less/main.less
+++ b/src/less/main.less
@@ -119,5 +119,7 @@ h2 {
  * TODO: In a later version of this boilerplate, I'd like to automate this.
  */
 
+@import 'helpers.less';
+@import 'animations.less';
 @import '../app/directives/imageAccordion/imageAccordion.less';
 
