--- a/src/app/directives/imageAccordion/imageAccordion.less
+++ b/src/app/directives/imageAccordion/imageAccordion.less
@@ -30,6 +30,9 @@
             font-size: 16px;
             height: @image-size/2;
         }
+        .content {
+            overflow: hidden;
+        }
     }
     &.alternate {
         background: lighten(@base-color, 10);
