--- a/src/app/directives/imageAccordion/accordionRow.tpl.html
+++ b/src/app/directives/imageAccordion/accordionRow.tpl.html
@@ -3,7 +3,8 @@
         <img src="http://placehold.it/60x60" alt=""/>
     </div>
     <div class="accordion-content">
+        <div ng-if="!!alternate" ng-show="visible" class="content slide" ng-transclude></div>
         <div class="title" ng-click="visible = !visible">{{title}}</div>
-        <div ng-show="visible" class="content slide" ng-transclude></div>
+        <div ng-if="!alternate"  ng-show="visible" class="content slide" ng-transclude></div>
     </div>
 </div>
