--- a/src/app/directives/imageAccordion/imageAccordion.less
+++ b/src/app/directives/imageAccordion/imageAccordion.less
@@ -9,7 +9,7 @@
     padding: 0 @image-size;
     position: relative;
     background: @base-color;
-    margin-top: -@border-size;
+    margin-top: -@border-size * 2;
     .accordion-image {
         position: absolute;
         left: 0;
@@ -20,6 +20,10 @@
         border-bottom: @border-size solid @border-color;
         border-left: @border-size solid @border-color;
         z-index: 100;
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
     .accordion-content {
         border-top: @border-size solid @border-color;
@@ -28,7 +32,7 @@
         .title {
             margin: 0;
             font-size: 16px;
-            height: @image-size/2;
+            height: (@image-size - @border-size)/2;
             cursor: pointer;
         }
         .content {
@@ -41,8 +45,7 @@
             left: initial;
             top: initial;
             right: 0;
-            bottom: 0;
-            margin-top: -(@image-size/2);
+            bottom: @border-size;
             border-left: 0;
             border-right: @border-size solid @border-color;
         }
