--- a/src/app/directives/imageAccordion/imageAccordion.less
+++ b/src/app/directives/imageAccordion/imageAccordion.less
@@ -9,7 +9,7 @@
     padding: 0 @image-size;
     position: relative;
     background: @base-color;
-    margin-top: -@border-size * 2;
+    margin-top: -@border-size;
     .accordion-image {
         position: absolute;
         left: 0;
@@ -45,7 +45,7 @@
             left: initial;
             top: initial;
             right: 0;
-            bottom: @border-size;
+            bottom: 0;
             border-left: 0;
             border-right: @border-size solid @border-color;
         }
