--- a/src/app/directives/imageAccordion/accordionRow.tpl.html
+++ b/src/app/directives/imageAccordion/accordionRow.tpl.html
@@ -1,4 +1,5 @@
 <div class="accordion-row" ng-class="{ alternate: !!alternate}">
+    <div class="alt-background"></div>
     <div class="accordion-image">
         <img src="http://placehold.it/60x60" alt=""/>
     </div>
