--- a/src/app/experience/experience.tpl.html
+++ b/src/app/experience/experience.tpl.html
@@ -1,5 +1,13 @@
 <image-accordion>
-    <accordion-row ng-repeat="n in [1,2,3,4]" title="Title - {{n}}" alternate="$index % 2">Content - {{n}}</accordion-row>
+    <accordion-row ng-repeat="n in [1,2,3,4]" title="Title - {{n}}" alternate="$index % 2">
+        Content - {{n}}<br/>
+        Content - {{n}}<br/>
+        Content - {{n}}<br/>
+        Content - {{n}}<br/>
+        Content - {{n}}<br/>
+        Content - {{n}}<br/>
+        Content - {{n}}<br/>
+    </accordion-row>
     <!--<accordion-row ng-repeat="job in experience" title="{{job.title}}" alternate="$index % 2">-->
         <!--<h3>Websites developed in this position</h3>-->
         <!--<ul>-->
