Initial header/footer and base colour

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -121,5 +121,9 @@ h2 {
 
 @import 'helpers.less';
 @import 'animations.less';
+
+@import '_header.less';
+@import '_footer.less';
+
 @import '../app/directives/imageAccordion/imageAccordion.less';
 
