--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -9,3 +9,16 @@
 
 @sansFontFamily: 'Roboto', sans-serif;
 
+/**
+ * Sizing variables
+ */
+
+@header-size: 60px;
+@footer-size: 150px;
+
+/**
+ * Colour scheme variables
+ */
+
+@site-base-colour: #7197AF;
+@site-colour-dark: darken(@site-base-colour, 20);
