Updating gruntfile to copy images and partials, and added _header partial

--- a/src/less/_header.less
+++ b/src/less/_header.less
@@ -1,6 +1,6 @@
 @import (reference) 'main.less';
 
 .header {
-    background: @site-colour-dark;
+    background: @site-colour-medium;
     height: @header-size;
 }
