--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -20,5 +20,7 @@
  * Colour scheme variables
  */
 
-@site-base-colour: #7197AF;
+@site-base-colour: #595959;
+@site-highlight-colour: #009bff;
+@site-colour-medium: @site-base-colour;
 @site-colour-dark: darken(@site-base-colour, 20);
