--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -13,14 +13,25 @@
  * Sizing variables
  */
 
+@gutter-size: 20px;
 @header-size: 60px;
 @footer-size: 150px;
+@container-width: 1200px;
+//@TODO @breakpoint-mobile, @breakpoint-tablet, @breakpoint-desktop
+
+/**
+ * Fonts
+ */
+@font-size-standard: 12px;
+@font-size-medium: 14px;
+@font-size-large: 16px;
 
 /**
  * Colour scheme variables
  */
 
 @site-base-colour: #595959;
+@site-inverted-colour: #ffffff;
 @site-highlight-colour: #009bff;
 @site-colour-medium: @site-base-colour;
 @site-colour-dark: darken(@site-base-colour, 20);
