--- a/src/partials/_header.tpl.html
+++ b/src/partials/_header.tpl.html
@@ -1,7 +1,23 @@
 <div class="header">
-  <div class="container">
-      <div class="site-logo">
-          Jarred Mack - Front End Developer
-      </div>
-  </div>
+    <div class="container">
+        <div class="site-logo">
+            <div>
+                <img src="images/logos/jarred-mack.png" alt="Jarred Mack.com"/>
+            </div>
+            <div class="logo-content">
+                <div class="name">Jarred Mack</div>
+                <div>Front End/UX Developer</div>
+            </div>
+        </div>
+        <div class="menu">
+            <div>
+                <ul>
+                    <li><a href="">Github</a></li>
+                    <li><a href="">Experience</a></li>
+                    <li><a href="">Portfilio</a></li>
+                    <li><a href="">About Me</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
