--- a/src/less/main.less
+++ b/src/less/main.less
@@ -66,7 +66,8 @@ a {
 }
 
 .container {
-    width: @container-width;
+    width: 100%;
+    max-width: @container-width;
     height: 100%;
     .center();
 }
