Responsive header/footer, and initial hamburger with no animations

--- a/src/less/_header.less
+++ b/src/less/_header.less
@@ -31,5 +31,10 @@
                 }
             }
         }
+        .hamburger {
+            margin-right: @gutter-size / 2;
+            cursor: pointer;
+            .hamburger-animate(@header-size / 2, @site-inverted-colour);
+        }
     }
 }
