--- a/src/less/_footer.less
+++ b/src/less/_footer.less
@@ -3,6 +3,9 @@
 .footer {
     background: @site-colour-medium;
     height: @footer-size;
+    @media screen and (max-width: @breakpoint-mobile) {
+        height: @footer-size * 1.25;
+    }
     .contact {
         .employment-status {
             margin-top: 10px;
@@ -19,10 +22,20 @@
                 color: #23c345;
             }
         }
+        @media screen and (max-width: @breakpoint-mobile) {
+            text-align: center;
+            margin-bottom: 10px;
+        }
     }
     .copyright {
         position: absolute;
         bottom: 10px;
-        right: 0;
+        right: 10px;
+        @media screen and (max-width: @breakpoint-mobile) {
+            position: relative;
+            bottom: 0;
+            right: 0;
+            text-align: center;
+        }
     }
 }
