--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -17,7 +17,9 @@
 @header-size: 60px;
 @footer-size: 150px;
 @container-width: 1200px;
-//@TODO @breakpoint-mobile, @breakpoint-tablet, @breakpoint-desktop
+@breakpoint-mobile: 650px;
+@breakpoint-tablet: 1000px;
+@breakpoint-desktop: 1200px;
 
 /**
  * Fonts
