--- a/src/partials/_header.tpl.html
+++ b/src/partials/_header.tpl.html
@@ -10,13 +10,20 @@
             </div>
         </div>
         <div class="menu">
-            <div>
+            <div class="desktop">
                 <ul>
                     <li><a href="">Github</a></li>
                     <li><a href="">Experience</a></li>
                     <li><a href="">Portfilio</a></li>
                     <li><a href="">About Me</a></li>
                 </ul>
+            </div>
+            <div class="mobile">
+                <div class="hamburger" ng-click="menu.active = !menu.active" ng-class="{active: menu.active}">
+                    <div class="top"></div>
+                    <div class="middle"></div>
+                    <div class="bottom"></div>
+                </div>
             </div>
         </div>
     </div>
