--- a/src/less/_header.less
+++ b/src/less/_header.less
@@ -34,7 +34,7 @@
         .hamburger {
             margin-right: @gutter-size / 2;
             cursor: pointer;
-            .hamburger-animate(@header-size / 2, @site-inverted-colour);
+            .hamburger-animate(@header-size / 2, @site-inverted-colour, 0.5s);
         }
     }
 }
