--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -16,6 +16,7 @@
 @gutter-size: 20px;
 @header-size: 60px;
 @footer-size: 150px;
+@side-nav-size: 200px;
 @container-width: 1200px;
 @breakpoint-mobile: 650px;
 @breakpoint-tablet: 1000px;
@@ -37,3 +38,4 @@
 @site-highlight-colour: #009bff;
 @site-colour-medium: @site-base-colour;
 @site-colour-dark: darken(@site-base-colour, 20);
+@site-colour-light: lighten(@site-base-colour, 20);
