Container min-height 100%

--- a/src/less/_bootstrap.less
+++ b/src/less/_bootstrap.less
@@ -11,6 +11,10 @@
     src: local('Roboto Regular'), local('Roboto-Regular'), url(fonts/Roboto-Regular.woff) format('woff');
 }
 
+html, body {
+    height: 100%;
+}
+
 code, pre, .pre {
     padding: 5px;
     margin: 10px 0;
