--- a/src/less/main.less
+++ b/src/less/main.less
@@ -31,4 +31,5 @@
 .content {
     background: url('/images/background.jpg') no-repeat center;
     background-size: cover;
+    min-height: ~"calc(100% - @{header-size} - @{footer-size})";
 }
