--- a/src/less/main.less
+++ b/src/less/main.less
@@ -32,4 +32,5 @@
     background: url('/images/background.jpg') no-repeat center;
     background-size: cover;
     min-height: ~"calc(100% - @{header-size} - @{footer-size})";
+    padding: 20px 0;
 }
