--- a/src/app/experience/experience.tpl.html
+++ b/src/app/experience/experience.tpl.html
@@ -1,4 +1,4 @@
-<collapsible ng-repeat="n in [1,2,3,4]" title="Title - {{n}}" alternate="$index % 2">
+<collapsible ng-repeat="n in [1]" title="Title - {{n}}">
         Content - {{n}}<br/>
         Content - {{n}}<br/>
         Content - {{n}}<br/>
