--- a/src/app/directives/collapsible/collapsible.less
+++ b/src/app/directives/collapsible/collapsible.less
@@ -1,73 +1,33 @@
+@import (reference) '../../../less/main.less';
+
+@padding: 5px;
 @image-size: 60px;
-@border-size: 1px;
-@base-color: #ccc;
-@alt-color: lighten(@base-color, 10);
-@border-color: darken(@base-color, 20);
-@title-height: (@image-size - (2 * @border-size)) / 2;
 
 .collapsible {
     width: 100%;
-    box-sizing: border-box;
-    padding: 0 @image-size;
-    position: relative;
-    background: @base-color;
-    margin-top: -@border-size * 2;
-    .collapsible-image {
-        position: absolute;
-        left: 0;
-        top: 0;
+    height: @image-size + (2 * @padding);
+    background: rgba(0, 0, 0, 0.75);
+    .logo {
         width: @image-size;
         height: @image-size;
-        border-top: @border-size solid @border-color;
-        border-bottom: @border-size solid @border-color;
-        border-left: @border-size solid @border-color;
-        z-index: 100;
-        img {
-            width: 100%;
-            height: 100%;
+        float: left;
+        margin: @padding;
+    }
+    .title {
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+        .center-content(false);
+        > div {
+            margin-left: @padding;
+            font-size: @font-size-large;
         }
     }
     .collapsible-content {
-        border-top: @border-size solid @border-color;
-        border-right: @border-size solid @border-color;
-        border-bottom: @border-size solid @border-color;
-        .title {
-            margin: 0;
-            font-size: 16px;
-            height: @title-height;
-            line-height: @title-height;
-            cursor: pointer;
-        }
-        .content {
-            overflow: hidden;
-        }
-    }
-    .alt-background {
-        background: @alt-color;
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: @image-size;
-        height: 100%;
-    }
-    &.alternate {
-        background: @alt-color;
-        .collapsible-image {
-            left: initial;
-            top: initial;
-            right: 0;
-            bottom: 0;
-            border-left: 0;
-            border-right: @border-size solid @border-color;
-        }
-        .collapsible-content {
-            border-right: 0;
-            border-left: @border-size solid @border-color;
-        }
-        .alt-background {
-            right: initial;
-            left: 0;
-            background: @base-color;
+        background: rgba(0, 0, 0, 0.5);
+        overflow: hidden;
+        > div {
+            padding: @padding;
         }
     }
 }
