Adding full title for job tiles, and styling the dropdown

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -24,6 +24,7 @@
  * Module specific stylesheets
  */
 @import '../app/directives/collapsible/collapsible.less';
+@import '../app/experience/experience.less';
 
 /**
  * Site global styles
