--- a/src/app/directives/collapsible/collapsible.less
+++ b/src/app/directives/collapsible/collapsible.less
@@ -5,8 +5,6 @@
 
 .collapsible {
     width: 100%;
-    height: @image-size + (2 * @padding);
-    background: rgba(0, 0, 0, 0.75);
     .logo {
         width: @image-size;
         height: @image-size;
@@ -14,10 +12,11 @@
         margin: @padding;
     }
     .title {
-        width: 100%;
-        height: 100%;
-        cursor: pointer;
         .center-content(false);
+        cursor: pointer;
+        width: 100%;
+        height: @image-size + (2 * @padding);
+        background: rgba(0, 0, 0, 0.75);
         > div {
             margin-left: @padding;
             font-size: @font-size-large;
@@ -27,7 +26,7 @@
         background: rgba(0, 0, 0, 0.5);
         overflow: hidden;
         > div {
-            padding: @padding;
+            padding: @padding * 2;
         }
     }
 }
