--- a/src/app/experience/experience.tpl.html
+++ b/src/app/experience/experience.tpl.html
@@ -1,34 +1,27 @@
-<collapsible ng-repeat="n in [1]" title="Title - {{n}}">
-        Content - {{n}}<br/>
-        Content - {{n}}<br/>
-        Content - {{n}}<br/>
-        Content - {{n}}<br/>
-        Content - {{n}}<br/>
-        Content - {{n}}<br/>
-        Content - {{n}}<br/>
+<collapsible ng-repeat="job in experience" title="{{job.started|date:'MMMM yyyy'}}{{!!job.finished ? '-':'-Present'}}{{job.finished|date:'MMMM yyyy'}} - {{job.title}} at {{job.company}}">
+    <div>{{job.description}}</div>
+
+    <h3>Websites developed in this position</h3>
+    <ul>
+        <li ng-repeat="site in job.portfolio">
+            {{site.title}} - <a href="{{site.url}}">{{site.url}}</a>
+            <ul ng-if="site.description">
+                <li>{{site.description}}</li>
+            </ul>
+        </li>
+    </ul>
+
+    <h3>Skills and languages used in this position</h3>
+    <ul>
+        <li ng-repeat="skill in job.skill">
+            {{skill}}
+        </li>
+    </ul>
+
+    <h3 ng-if="job.other.length > 0">Other skills applied in this position</h3>
+    <ul ng-if="job.other.length > 0">
+        <li ng-repeat="other in job.other">
+            {{other}}
+        </li>
+    </ul>
 </collapsible>
-<!--<accordion-row ng-repeat="job in experience" title="{{job.title}}" alternate="$index % 2">-->
-    <!--<h3>Websites developed in this position</h3>-->
-    <!--<ul>-->
-        <!--<li ng-repeat="site in job.portfolio">-->
-            <!--{{site.title}} - <a href="{{site.url}}">{{site.url}}</a>-->
-            <!--<ul ng-if="site.description">-->
-                <!--<li>{{site.description}}</li>-->
-            <!--</ul>-->
-        <!--</li>-->
-    <!--</ul>-->
-
-    <!--<h3>Skills and languages used in this position</h3>-->
-    <!--<ul>-->
-        <!--<li ng-repeat="skill in job.skill">-->
-            <!--{{skill}}-->
-        <!--</li>-->
-    <!--</ul>-->
-
-    <!--<h3 ng-if="job.other.length > 0">Other skills applied in this position</h3>-->
-    <!--<ul ng-if="job.other.length > 0">-->
-        <!--<li ng-repeat="other in job.other">-->
-            <!--{{other}}-->
-        <!--</li>-->
-    <!--</ul>-->
-<!--</accordion-row>-->
