Implementing logo images from backend

--- a/src/app/directives/collapsible/collapsible.tpl.html
+++ b/src/app/directives/collapsible/collapsible.tpl.html
@@ -1,5 +1,5 @@
 <div class="collapsible">
-    <img class="logo" src="http://placehold.it/60x60" alt=""/>
+    <img class="logo" ng-src="{{logo}}" alt=""/>
     <div class="title" ng-click="visible = !visible">
         <div>
             {{title}}
