--- a/src/less/_experience_title.less
+++ b/src/less/_experience_title.less
@@ -1,41 +1,5 @@
 @import (reference) 'main.less';
 
-.footer {
-    background: @site-colour-medium;
-    height: @footer-size;
-    @media screen and (max-width: @breakpoint-mobile) {
-        height: @footer-size * 1.25;
-    }
-    .contact {
-        .employment-status {
-            margin-top: 10px;
-            > span {
-                font-weight: bold;
-            }
-            .unavailable {
-                color: #FF251C;
-            }
-            .soon {
-                color: #eea607;
-            }
-            .available {
-                color: #23c345;
-            }
-        }
-        @media screen and (max-width: @breakpoint-mobile) {
-            text-align: center;
-            margin-bottom: 10px;
-        }
-    }
-    .copyright {
-        position: absolute;
-        bottom: 10px;
-        right: 10px;
-        @media screen and (max-width: @breakpoint-mobile) {
-            position: relative;
-            bottom: 0;
-            right: 0;
-            text-align: center;
-        }
-    }
+.experience-title {
+    font-size: @font-size-large;
 }
