Adding text overflow property to collapsible titles

--- a/src/app/directives/collapsible/collapsible.less
+++ b/src/app/directives/collapsible/collapsible.less
@@ -17,9 +17,10 @@
         width: 100%;
         height: @image-size + (2 * @padding);
         background: rgba(0, 0, 0, 0.75);
+        padding-left: @image-size + (@padding * 3);
         > div {
-            margin-left: @padding;
             font-size: @font-size-large;
+            width: 100%;
         }
     }
     .collapsible-content {
