--- a/src/less/_experience_title.less
+++ b/src/less/_experience_title.less
@@ -2,4 +2,10 @@
 
 .experience-title {
     font-size: @font-size-large;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 100%;
+    white-space: nowrap;
+    display: block;
+    padding-right: 10px;
 }
