--- a/src/app/directives/collapsible/collapsible.tpl.html
+++ b/src/app/directives/collapsible/collapsible.tpl.html
@@ -4,6 +4,7 @@
         <div ng-if="!!titleTemplate" ng-include="titleTemplate" onload="data = titleData"></div>
         <div ng-if="!titleTemplate">{{title}}</div>
     </div>
+    <div class="icon expand" ng-class="{open: visible}" ng-click="visible = !visible"></div>
     <div ng-show="visible" class="collapsible-content slide-down">
         <div ng-transclude></div>
     </div>
