--- a/src/less/main.less
+++ b/src/less/main.less
@@ -15,6 +15,7 @@
 @import 'variables.less';
 @import 'helpers.less';
 @import 'animations.less';
+@import 'icons.less';
 
 @import '_bootstrap.less';
 @import '_header.less';
