--- a/src/less/_bootstrap.less
+++ b/src/less/_bootstrap.less
@@ -35,7 +35,15 @@ pre {
 div {
     color: @site-inverted-colour;
     font-family: 'Helvetica', 'Arial';
-    font-size: 12px;
+    font-size: @font-size-small;
+}
+
+h1 {
+    font-size: @font-size-large;
+}
+
+h2, h3 {
+    font-size: @font-size-medium;
 }
 
 a {
