--- a/src/less/_experience_title.less
+++ b/src/less/_experience_title.less
@@ -6,7 +6,7 @@
     .center-content(false);
     div {
         display: inline-block;
-        font-size: @font-size-large;
+        font-size: @font-size-medium;
         text-overflow: ellipsis;
         overflow: hidden;
         width: ~"calc(100% - (@{period-width} + @{padding}))";
