--- a/src/less/_header.less
+++ b/src/less/_header.less
@@ -11,9 +11,9 @@
         .logo-content {
             text-align: center;
             margin-left: @gutter-size / 2;
-            font-size: @font-size-medium;
+            font-size: @font-size-small;
             .name {
-                font-size: @font-size-large;
+                font-size: @font-size-medium;
             }
         }
     }
@@ -25,7 +25,7 @@
                 list-style: none;
                 > li {
                     float: left;
-                    font-size: @font-size-large;
+                    font-size: @font-size-medium;
                     margin-right: @gutter-size;
                     &:last-child {
                         margin-right: 0;
@@ -55,7 +55,7 @@
             padding: 0;
             text-align: center;
             > li {
-                font-size: @font-size-large;
+                font-size: @font-size-medium;
                 margin: @gutter-size 0;
             }
         }
