--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -25,9 +25,9 @@
 /**
  * Fonts
  */
-@font-size-standard: 12px;
-@font-size-medium: 14px;
-@font-size-large: 16px;
+@font-size-small: 12px;
+@font-size-medium: 16px;
+@font-size-large: 22px;
 
 /**
  * Colour scheme variables
