--- a/src/less/_footer.less
+++ b/src/less/_footer.less
@@ -7,6 +7,8 @@
         height: @footer-size * 1.25;
     }
     .contact {
+        position: absolute;
+        top: 20px;
         .employment-status {
             margin-top: 10px;
             > span {
