Implementing fontawesome star lists

--- a/src/app/experience/experience.less
+++ b/src/app/experience/experience.less
@@ -2,4 +2,16 @@
 
 .collapsible {
     margin: 10px 0;
+    .container {
+        padding: 0;
+        .tile {
+            width: 100px;
+            height: 100px;
+            float: left;
+            background: white;
+            margin: 0 10px;
+            //@TODO Style this properly
+        }
+    }
+
 }
