Allowing for scroll on mobile layout

--- a/src/app/directives/collapsible/collapsible.less
+++ b/src/app/directives/collapsible/collapsible.less
@@ -36,5 +36,8 @@
         > div {
             padding: @padding * 3;
         }
+        @media screen and (max-width: @breakpoint-mobile) {
+            overflow-y: scroll;
+        }
     }
 }
