--- a/src/app/about/about.tpl.html
+++ b/src/app/about/about.tpl.html
@@ -1,6 +1,3 @@
-<div class="col4">
-    <div class="row">
-        <div class="span2">asd</div>
-        <div class="span2">asd</div>
-    </div>
+<div class="content-panel">
+
 </div>
