--- a/src/less/_footer.less
+++ b/src/less/_footer.less
@@ -26,7 +26,8 @@
         }
         @media screen and (max-width: @breakpoint-mobile) {
             text-align: center;
-            margin-bottom: 10px;
+            margin-bottom: 30px;
+            position: relative;
         }
     }
     .copyright {
