--- a/src/app/about/about.tpl.html
+++ b/src/app/about/about.tpl.html
@@ -1,3 +1,16 @@
 <div class="content-panel">
-
+    <div class="tab-menu">
+        <div>
+            <div class="link">About Me</div>
+            <div class="tab"></div>
+        </div>
+        <div class="active">
+            <div class="link">Skills</div>
+            <div class="tab"></div>
+        </div>
+        <div>
+            <div class="link">Other stuff</div>
+            <div class="tab"></div>
+        </div>
+    </div>
 </div>
