Moving tabmenu out to a partial

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -19,6 +19,7 @@
 
 @import '_bootstrap.less';
 @import '_header.less';
+@import '_tab_menu.less';
 @import '_experience_title.less';
 @import '_footer.less';
 @import 'experience.less';
@@ -41,6 +42,7 @@
 
 .content-panel {
     width: 100%;
+    max-width: 900px;
     min-height: 600px;
     background: rgba(0, 0, 0, 0.75);
     position: relative;
