--- a/src/less/main.less
+++ b/src/less/main.less
@@ -46,5 +46,6 @@
     min-height: 600px;
     background: rgba(0, 0, 0, 0.75);
     position: relative;
+    margin-top: @tab-height; //_tab_menu.less
     .center();
 }
