--- a/src/app/about/about.tpl.html
+++ b/src/app/about/about.tpl.html
@@ -1,3 +1,4 @@
 <div class="content-panel">
-    <div ng-include="'partials/_tab_menu.tpl.html'"></div>
+    <tab-menu menu-items="pages"></tab-menu>
+
 </div>
